[#19 #21 Mur] fixed getting horizontal scroll if image is big in article description

--- a/client/src/scss/pages/_displayArticles.scss
+++ b/client/src/scss/pages/_displayArticles.scss
@@ -64,6 +64,7 @@
       img {
         display: block;
         margin: 1rem auto;
+        max-width: 100%;
       }
 
       a {
